--- a/dbord.css
+++ b/dbord.css
@@ -9,7 +9,7 @@ html {
 			box-sizing: border-box;
 }
 *, *:before, *:after { box-sizing:inherit; }
-html,body,div,p,img,span,a,em,strong,pre,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,form,fieldset,legend,caption,input,textarea,button,select,object,video,iframe{ margin:0;padding:0;border:0;font-size:0; }
+html,body,div,p,img,span,a,em,strong,pre,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,form,fieldset,legend,caption,input,textarea,button,select,object,video,iframe{ margin:0;padding:0;border:0;font-size:0;line-height:0; }
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{ display:block;margin:0;padding:0;border:0;font-size:0;line-height:0; }
 
 /* =common
@@ -52,7 +52,7 @@ body{
    min-width:780px;
    min-height:600px;
 
-   position: relative;
+   position: relative; 
 }
 .box-wrapper section.status .dh_center{
    position:absolute;
@@ -137,12 +137,13 @@ body{
 .lvmtxt{ position:absolute; top:108px; left:260px; font-size:7px; line-height:7px; color:#4e5053; }
 
 /*하단탭*/
+.btm_box{ display:table-cell; height:146px; width:calc(33.3333333%); vertical-align:top;}
 .btmbleft{ padding-left:14px; } .btmbright{ padding-right:14px; } .btmsmleft{ padding-left:8px; }  .btmsmright{ padding-right:8px; }
 .datb_tlte{ position:relative; width:100%; height:26px; background: linear-gradient(to bottom, #0f4c6e, #29556a); border-radius:2px; }
 .datb_btwrap{ width:100%; height:120px; background-color:#060b10; position:relative;  }
 .btmmitxt{ position:absolute; font-size:14px; line-height:14px; color:#ffffff; left:14px; top:50%; margin-top:-8px; vertical-align:middle;
  }
-#btm_graph{ position:absolute; top:16px; width:100%;  height:82px; display:inline-block; margin-top:8px; padding-left:12px; padding-right:12px; line-height:9px;  }
+#btm_graph{ position:absolute; top:16px; width:100%;  height:82px; display:inline-block; margin-top:8px; padding-left:12px; padding-right:12px;}
 .btm_holdwp{ position:relative; width:352px; }
 
 .brinfo_txt{ display:block; font-size:14px; line-height:14px; color:#8e8f90; margin-bottom:13px; }
@@ -153,7 +154,7 @@ body{
 .top_bphline{ float:right; margin-right:12px; margin-top:6px; }
 .bult_box{ display:table; width:100%;  }
 
-#circle{
+#circle{ 
    position:absolute;
    width:488px;
    height:488px;
@@ -161,7 +162,7 @@ body{
    top:50%;
    margin-left:-244px;
    margin-top:-244px;
-    border-radius: 50%;
+    border-radius: 50%; 
    background:#10161c;
  }
  .clc_idg{
@@ -171,11 +172,11 @@ body{
    left:50%;
    top:50%;
    margin-left:-244px;
-   margin-top:-244px;
-    border-radius: 50%;
+   margin-top:-244px; 
+    border-radius: 50%; 
    background:#08131c;
  }
-
+ 
 #cle_num_box{
    position:absolute;
    width:488px;
@@ -206,7 +207,7 @@ body{
    margin-left:-15px;
    margin-top:-15px;
  }
- .cnt_clc{ position:absolute; border-radius: 50%; width:66px; height:66px; background:#08131c; border: 2px solid #40ca89;
+ .cnt_clc{ position:absolute; border-radius: 50%; width:66px; height:66px; background:#08131c; border: 2px solid #40ca89; 
    left:50%;
    top:50%;
    margin-left:-33px;
@@ -222,7 +223,7 @@ body{
    left:50%;
    top:50%;
    margin-left:-126px;
-   margin-top:-126px;
+   margin-top:-126px;	
 }
 .xpoint{ position:absolute; }
 .srv_txt{ position:absolute; font-size:12px; line-height:12px; color:#757c82; background-color:#020406; padding:4px;
@@ -231,22 +232,22 @@ body{
    margin-top:50px;
    margin-left:-50px;
  }
-
+ 
  .help_clclr_wrap{ position:absolute; width:114px; height:104px; border-radius:2px; background-color:#1a1f24; top:18px; left:18px; }
  .hc_hptit{ display:block; font-size:12px; line-height:12px; color:#8e8f90; margin-top:10px; margin-left:10px; }
  .hc_hptxt{ display:inline-block; font-size:12px; line-height:12px; color:#8e8f90; margin-left:7px; }
  .hp_clcr{ border-radius: 50%; width:10px; height:10px; display:inline-block; }
  .hp_cldt{ border-radius: 50%; width:10px; height:10px; display:inline-block;  border: 2px solid #9e9e9e; }
- .sblue{ background-color:#80ca3e; } .sgrn{ background-color:#3fa7ff; } .sgry{ background-color:#f9465c; }
+ .sblue{ background-color:#80ca3e; } .sgrn{ background-color:#3fa7ff; } .sgry{ background-color:#f9465c; } 
  .hpclbox{ display:block; margin-top:12px; margin-left:10px; }
  .hpclbdt{ display:block; margin-top:8px; margin-left:10px; }
-
+ 
  .ndprs_txt{ display:block; font-size:13px; line-height:13px; color:#ffffff; margin-bottom:13px; white-space:nowrap;  }
  .nde_tb{ font-size:12px; color:#ffffff; }
  .nde_tb tr{ height:24px; } .nde_tb tr:nth-child(even) { height:1px; } .nde_tb tr:first-child { color:#8e8f90; }
-
+ 
  .hidsh_btn{ background-image:url(images/righthide_btn.png); width:34px; height:34px;  margin-left:348px; cursor:pointer; }
-
+ 
  .hsppop_bg{ position:absolute; top:0px; background-color:#060b10; width:153px; border: 2px solid #283f59; z-index:999; }
  .clstab{ background-color:#283f59; height:20px; }
  .cls_imgx{ margin-top:5px; margin-right:5px; float:right; }
@@ -263,10 +264,10 @@ body{
 .btn_hndnode{ display:inline-block; cursor: pointer; position:relative;
 			position:relative; text-align:center;
 			width:82px; height:82px;
-			border:1px solid #454f55;
+			border:1px solid #454f55; 
 			background-color:#1e3341;
 			border-radius:6px;
-			-webkit-border-radius:6px;
+			-webkit-border-radius:6px; 
 			-moz-border-radius:6px;
 }
 .hndcheck{ border:1px solid #1a7ae7; background-color:#1a7ae7; }
@@ -278,7 +279,7 @@ body{
 .ppspcnlbtn{ width:137px; height:48px; border:1px solid #e9e9e9; background-color:#787878; text-align:center; cursor:pointer; margin-left:15px; display:inline-block; }
 .ppsp_txt{ font-size:14px; color:#ffffff; display:inline-block; margin-top:21px; }
 .hnduncheck{ opacity: 0.2 }
-.popup_btnwrap{
+.popup_btnwrap{ 
    position:absolute;
    width:730px;
    height:650px;
@@ -294,12 +295,12 @@ body{
    margin-left:-256px;
    margin-top:-256px;
  }
-
+ 
 .node_selectbox{ float:right; margin-top:15px; margin-right:13px; vertical-align:top; }
 .norstart_btn{ width:137px; height:32px; background-color:#21252a;  border: 1px solid #33373b; text-align:center; }
 .noprbtest_btn{ width:137px; height:32px; background-color:#21252a;  border: 1px solid #33373b; margin-top:5px; margin-bottom:5px; text-align:center; }
 .noresbtn_txt{ font-size:14px; color:#656769; display:inline-block; margin-top:13px;  }
-
+ 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
 
@@ -307,44 +308,5 @@ body{
 	.btn_hndnode{ margin-bottom:9px; vertical-align:top; }
 	.ppbtn_wrap{ text-align:center; margin-top:16px; margin-bottom:0px; }
 }
-
-
-
-
-
-.prove_activate{ position:absolute; width:114px; height:76px; border-radius:2px; background-color:#1a1f24; top:130px; left:18px; }
-.prove_num_txt{ display:inline-block; font-size:12px; color:#ffffff; margin-top: 15px; margin-left: 10px; }
-.prvprgss_bar{ width: 94px; height: 10px; background-color: #353535; margin-top: 11px; margin-left: 10px; }
-.prvactive_bar{ width: 76px; height: 10px; background-color: #00a1b2; }
-
-.box-wrapper section.right{
-  position:absolute;
-  width:390px;
-  left:calc(100% - 404px);
-	height:calc(100% - 168px);
-}
-@media (max-width:1170px){
-   .box-wrapper section.right{
-      left:780px;
-   }
-}
-.left_info{ margin-bottom: 8px; }
-.lastd_wrap{
-	position:absolute; width:390px; left:50%; top: 18px; margin-left:-195px; margin-top: 0px;
-	height:calc(100% - 18px); }
-.left_graph_box{ position: absolute; width: 100%; bottom: 0; }
-.lfd_box_se{ position:absolute;
-	background-color:#060b10; border-radius:2px; width:390px; height: calc(100% - 26px); top:26px; }
-.pv_topten{ position: absolute; height:calc(100% - 290px); }
-.datl_tlte{ position:absolute; width:390px; height:26px; background: linear-gradient(to bottom, #0f4c6e, #29556a); border-radius:2px; }
-
-.box-wrapper section.bottom{
-   width:calc(100% - 404px);
-   height:160px;
-   display:table;
-}
-.btm_box{ display:table-cell; height:146px; width: 50%; vertical-align:top;}
-.delay_right{ position: absolute; height:146px; width: 390px; bottom: 14px; right: 14px; vertical-align:top; }
-.lfd_box{ background-color:#060b10; border-radius:2px; width:390px; height:102px; padding-top:8px; padding-left:15px; }
-
+ 
 /* Recent date # 2019-10-10 */
